// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coreUtils.parseEs6ImportLines importSample1 example with no transformation 1`] = `
Object {
  "BaseDataAdapter": Object {
    "alias": "BaseDataAdapter",
    "isTypeImport": false,
    "lib": "./BaseDataAdapter",
    "libFullPath": "./BaseDataAdapter",
    "name": "BaseDataAdapter",
    "syntax": "es6",
    "type": "default",
  },
  "Express": Object {
    "alias": "Express",
    "isTypeImport": false,
    "lib": "express",
    "libFullPath": "express",
    "name": "Express",
    "syntax": "es6",
    "type": "module",
  },
  "IDataAdapter": Object {
    "alias": "IDataAdapter",
    "isTypeImport": false,
    "lib": "./IDataAdapter",
    "libFullPath": "./IDataAdapter",
    "name": "IDataAdapter",
    "syntax": "es6",
    "type": "default",
  },
  "JSX": Object {
    "alias": "JSX",
    "isTypeImport": true,
    "lib": "react",
    "libFullPath": "react",
    "name": "JSX",
    "syntax": "es6",
    "type": "module",
  },
  "RedisClientType": Object {
    "alias": "RedisClientType",
    "isTypeImport": false,
    "lib": "redis",
    "libFullPath": "redis",
    "name": "RedisClientType",
    "syntax": "es6",
    "type": "module",
  },
  "Something": Object {
    "alias": "Something",
    "isTypeImport": true,
    "lib": "solid",
    "libFullPath": "solid",
    "name": "Something",
    "syntax": "es6",
    "type": "module",
  },
  "SqluiCore": Object {
    "alias": "SqluiCore",
    "isTypeImport": false,
    "lib": "../../typings",
    "libFullPath": "../../typings",
    "name": "SqluiCore",
    "syntax": "es6",
    "type": "module",
  },
  "createClient": Object {
    "alias": "createClient",
    "isTypeImport": false,
    "lib": "redis",
    "libFullPath": "redis",
    "name": "createClient",
    "syntax": "es6",
    "type": "module",
  },
}
`;

exports[`coreUtils.parseEs6ImportLines importSample1 example with no transformation 2`] = `
Object {
  "../../typings": Array [
    Object {
      "alias": "SqluiCore",
      "isTypeImport": false,
      "lib": "../../typings",
      "libFullPath": "../../typings",
      "name": "SqluiCore",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "./BaseDataAdapter": Array [
    Object {
      "alias": "BaseDataAdapter",
      "isTypeImport": false,
      "lib": "./BaseDataAdapter",
      "libFullPath": "./BaseDataAdapter",
      "name": "BaseDataAdapter",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "./IDataAdapter": Array [
    Object {
      "alias": "IDataAdapter",
      "isTypeImport": false,
      "lib": "./IDataAdapter",
      "libFullPath": "./IDataAdapter",
      "name": "IDataAdapter",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "express": Array [
    Object {
      "alias": "Express",
      "isTypeImport": false,
      "lib": "express",
      "libFullPath": "express",
      "name": "Express",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "react": Array [
    Object {
      "alias": "JSX",
      "isTypeImport": true,
      "lib": "react",
      "libFullPath": "react",
      "name": "JSX",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "redis": Array [
    Object {
      "alias": "createClient",
      "isTypeImport": false,
      "lib": "redis",
      "libFullPath": "redis",
      "name": "createClient",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "RedisClientType",
      "isTypeImport": false,
      "lib": "redis",
      "libFullPath": "redis",
      "name": "RedisClientType",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "solid": Array [
    Object {
      "alias": "Something",
      "isTypeImport": true,
      "lib": "solid",
      "libFullPath": "solid",
      "name": "Something",
      "syntax": "es6",
      "type": "module",
    },
  ],
}
`;

exports[`coreUtils.parseEs6ImportLines importSample1 example with no transformation 3`] = `
Set {
  "createClient",
  "RedisClientType",
  "SqluiCore",
  "IDataAdapter",
  "BaseDataAdapter",
  "Express",
  "JSX",
  "Something",
}
`;

exports[`coreUtils.parseEs6ImportLines importSample1 example with transform relative 'src' 1`] = `
Object {
  "BaseDataAdapter": Object {
    "alias": "BaseDataAdapter",
    "isTypeImport": false,
    "lib": "./BaseDataAdapter",
    "libFullPath": "src//git/sqlui-native/commons/adapters/BaseDataAdapter",
    "name": "BaseDataAdapter",
    "syntax": "es6",
    "type": "default",
  },
  "Express": Object {
    "alias": "Express",
    "isTypeImport": false,
    "lib": "express",
    "libFullPath": "express",
    "name": "Express",
    "syntax": "es6",
    "type": "module",
  },
  "IDataAdapter": Object {
    "alias": "IDataAdapter",
    "isTypeImport": false,
    "lib": "./IDataAdapter",
    "libFullPath": "src//git/sqlui-native/commons/adapters/IDataAdapter",
    "name": "IDataAdapter",
    "syntax": "es6",
    "type": "default",
  },
  "JSX": Object {
    "alias": "JSX",
    "isTypeImport": true,
    "lib": "react",
    "libFullPath": "react",
    "name": "JSX",
    "syntax": "es6",
    "type": "module",
  },
  "RedisClientType": Object {
    "alias": "RedisClientType",
    "isTypeImport": false,
    "lib": "redis",
    "libFullPath": "redis",
    "name": "RedisClientType",
    "syntax": "es6",
    "type": "module",
  },
  "Something": Object {
    "alias": "Something",
    "isTypeImport": true,
    "lib": "solid",
    "libFullPath": "solid",
    "name": "Something",
    "syntax": "es6",
    "type": "module",
  },
  "SqluiCore": Object {
    "alias": "SqluiCore",
    "isTypeImport": false,
    "lib": "../../typings",
    "libFullPath": "src//git/sqlui-native/typings",
    "name": "SqluiCore",
    "syntax": "es6",
    "type": "module",
  },
  "createClient": Object {
    "alias": "createClient",
    "isTypeImport": false,
    "lib": "redis",
    "libFullPath": "redis",
    "name": "createClient",
    "syntax": "es6",
    "type": "module",
  },
}
`;

exports[`coreUtils.parseEs6ImportLines importSample1 example with transform relative 'src' 2`] = `
Object {
  "../../typings": Array [
    Object {
      "alias": "SqluiCore",
      "isTypeImport": false,
      "lib": "../../typings",
      "libFullPath": "src//git/sqlui-native/typings",
      "name": "SqluiCore",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "./BaseDataAdapter": Array [
    Object {
      "alias": "BaseDataAdapter",
      "isTypeImport": false,
      "lib": "./BaseDataAdapter",
      "libFullPath": "src//git/sqlui-native/commons/adapters/BaseDataAdapter",
      "name": "BaseDataAdapter",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "./IDataAdapter": Array [
    Object {
      "alias": "IDataAdapter",
      "isTypeImport": false,
      "lib": "./IDataAdapter",
      "libFullPath": "src//git/sqlui-native/commons/adapters/IDataAdapter",
      "name": "IDataAdapter",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "express": Array [
    Object {
      "alias": "Express",
      "isTypeImport": false,
      "lib": "express",
      "libFullPath": "express",
      "name": "Express",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "react": Array [
    Object {
      "alias": "JSX",
      "isTypeImport": true,
      "lib": "react",
      "libFullPath": "react",
      "name": "JSX",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "redis": Array [
    Object {
      "alias": "createClient",
      "isTypeImport": false,
      "lib": "redis",
      "libFullPath": "redis",
      "name": "createClient",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "RedisClientType",
      "isTypeImport": false,
      "lib": "redis",
      "libFullPath": "redis",
      "name": "RedisClientType",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "solid": Array [
    Object {
      "alias": "Something",
      "isTypeImport": true,
      "lib": "solid",
      "libFullPath": "solid",
      "name": "Something",
      "syntax": "es6",
      "type": "module",
    },
  ],
}
`;

exports[`coreUtils.parseEs6ImportLines importSample1 example with transform relative 'src' 3`] = `
Set {
  "createClient",
  "RedisClientType",
  "SqluiCore",
  "IDataAdapter",
  "BaseDataAdapter",
  "Express",
  "JSX",
  "Something",
}
`;

exports[`coreUtils.parseEs6ImportLines importSample1 example with transform relative 1`] = `
Object {
  "BaseDataAdapter": Object {
    "alias": "BaseDataAdapter",
    "isTypeImport": false,
    "lib": "./BaseDataAdapter",
    "libFullPath": "/git/sqlui-native/commons/adapters/BaseDataAdapter",
    "name": "BaseDataAdapter",
    "syntax": "es6",
    "type": "default",
  },
  "Express": Object {
    "alias": "Express",
    "isTypeImport": false,
    "lib": "express",
    "libFullPath": "express",
    "name": "Express",
    "syntax": "es6",
    "type": "module",
  },
  "IDataAdapter": Object {
    "alias": "IDataAdapter",
    "isTypeImport": false,
    "lib": "./IDataAdapter",
    "libFullPath": "/git/sqlui-native/commons/adapters/IDataAdapter",
    "name": "IDataAdapter",
    "syntax": "es6",
    "type": "default",
  },
  "JSX": Object {
    "alias": "JSX",
    "isTypeImport": true,
    "lib": "react",
    "libFullPath": "react",
    "name": "JSX",
    "syntax": "es6",
    "type": "module",
  },
  "RedisClientType": Object {
    "alias": "RedisClientType",
    "isTypeImport": false,
    "lib": "redis",
    "libFullPath": "redis",
    "name": "RedisClientType",
    "syntax": "es6",
    "type": "module",
  },
  "Something": Object {
    "alias": "Something",
    "isTypeImport": true,
    "lib": "solid",
    "libFullPath": "solid",
    "name": "Something",
    "syntax": "es6",
    "type": "module",
  },
  "SqluiCore": Object {
    "alias": "SqluiCore",
    "isTypeImport": false,
    "lib": "../../typings",
    "libFullPath": "/git/sqlui-native/typings",
    "name": "SqluiCore",
    "syntax": "es6",
    "type": "module",
  },
  "createClient": Object {
    "alias": "createClient",
    "isTypeImport": false,
    "lib": "redis",
    "libFullPath": "redis",
    "name": "createClient",
    "syntax": "es6",
    "type": "module",
  },
}
`;

exports[`coreUtils.parseEs6ImportLines importSample1 example with transform relative 2`] = `
Object {
  "../../typings": Array [
    Object {
      "alias": "SqluiCore",
      "isTypeImport": false,
      "lib": "../../typings",
      "libFullPath": "/git/sqlui-native/typings",
      "name": "SqluiCore",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "./BaseDataAdapter": Array [
    Object {
      "alias": "BaseDataAdapter",
      "isTypeImport": false,
      "lib": "./BaseDataAdapter",
      "libFullPath": "/git/sqlui-native/commons/adapters/BaseDataAdapter",
      "name": "BaseDataAdapter",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "./IDataAdapter": Array [
    Object {
      "alias": "IDataAdapter",
      "isTypeImport": false,
      "lib": "./IDataAdapter",
      "libFullPath": "/git/sqlui-native/commons/adapters/IDataAdapter",
      "name": "IDataAdapter",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "express": Array [
    Object {
      "alias": "Express",
      "isTypeImport": false,
      "lib": "express",
      "libFullPath": "express",
      "name": "Express",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "react": Array [
    Object {
      "alias": "JSX",
      "isTypeImport": true,
      "lib": "react",
      "libFullPath": "react",
      "name": "JSX",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "redis": Array [
    Object {
      "alias": "createClient",
      "isTypeImport": false,
      "lib": "redis",
      "libFullPath": "redis",
      "name": "createClient",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "RedisClientType",
      "isTypeImport": false,
      "lib": "redis",
      "libFullPath": "redis",
      "name": "RedisClientType",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "solid": Array [
    Object {
      "alias": "Something",
      "isTypeImport": true,
      "lib": "solid",
      "libFullPath": "solid",
      "name": "Something",
      "syntax": "es6",
      "type": "module",
    },
  ],
}
`;

exports[`coreUtils.parseEs6ImportLines importSample1 example with transform relative 3`] = `
Set {
  "createClient",
  "RedisClientType",
  "SqluiCore",
  "IDataAdapter",
  "BaseDataAdapter",
  "Express",
  "JSX",
  "Something",
}
`;

exports[`coreUtils.parseEs6ImportLines importSample2 example with no transformation 1`] = `
Object {
  "ActionDialogs": Object {
    "alias": "ActionDialogs",
    "isTypeImport": false,
    "lib": "src/components/ActionDialogs",
    "libFullPath": "src/components/ActionDialogs",
    "name": "ActionDialogs",
    "syntax": "es6",
    "type": "default",
  },
  "Alert": Object {
    "alias": "Alert",
    "isTypeImport": false,
    "lib": "@mui/material/Alert",
    "libFullPath": "@mui/material/Alert",
    "name": "Alert",
    "syntax": "es6",
    "type": "default",
  },
  "AppHeader": Object {
    "alias": "AppHeader",
    "isTypeImport": false,
    "lib": "src/components/AppHeader",
    "libFullPath": "src/components/AppHeader",
    "name": "AppHeader",
    "syntax": "es6",
    "type": "default",
  },
  "Box": Object {
    "alias": "Box",
    "isTypeImport": false,
    "lib": "@mui/material/Box",
    "libFullPath": "@mui/material/Box",
    "name": "Box",
    "syntax": "es6",
    "type": "default",
  },
  "CircularProgress": Object {
    "alias": "CircularProgress",
    "isTypeImport": false,
    "lib": "@mui/material/CircularProgress",
    "libFullPath": "@mui/material/CircularProgress",
    "name": "CircularProgress",
    "syntax": "es6",
    "type": "default",
  },
  "EditConnectionPage": Object {
    "alias": "EditConnectionPage",
    "isTypeImport": false,
    "lib": "src/views/EditConnectionPage",
    "libFullPath": "src/views/EditConnectionPage",
    "name": "EditConnectionPage",
    "syntax": "es6",
    "type": "default",
  },
  "ElectronEventListener": Object {
    "alias": "ElectronEventListener",
    "isTypeImport": false,
    "lib": "src/components/ElectronEventListener",
    "libFullPath": "src/components/ElectronEventListener",
    "name": "ElectronEventListener",
    "syntax": "es6",
    "type": "default",
  },
  "HashRouter": Object {
    "alias": "HashRouter",
    "isTypeImport": false,
    "lib": "react-router-dom",
    "libFullPath": "react-router-dom",
    "name": "HashRouter",
    "syntax": "es6",
    "type": "module",
  },
  "MainPage": Object {
    "alias": "MainPage",
    "isTypeImport": false,
    "lib": "src/views/MainPage",
    "libFullPath": "src/views/MainPage",
    "name": "MainPage",
    "syntax": "es6",
    "type": "default",
  },
  "MissionControl": Object {
    "alias": "MissionControl",
    "isTypeImport": false,
    "lib": "src/components/MissionControl",
    "libFullPath": "src/components/MissionControl",
    "name": "MissionControl",
    "syntax": "es6",
    "type": "default",
  },
  "NewConnectionPage": Object {
    "alias": "NewConnectionPage",
    "isTypeImport": false,
    "lib": "src/views/NewConnectionPage",
    "libFullPath": "src/views/NewConnectionPage",
    "name": "NewConnectionPage",
    "syntax": "es6",
    "type": "default",
  },
  "Route": Object {
    "alias": "Route",
    "isTypeImport": false,
    "lib": "react-router-dom",
    "libFullPath": "react-router-dom",
    "name": "Route",
    "syntax": "es6",
    "type": "module",
  },
  "Routes": Object {
    "alias": "Routes",
    "isTypeImport": false,
    "lib": "react-router-dom",
    "libFullPath": "react-router-dom",
    "name": "Routes",
    "syntax": "es6",
    "type": "module",
  },
  "ThemeProvider": Object {
    "alias": "ThemeProvider",
    "isTypeImport": false,
    "lib": "@mui/material/styles",
    "libFullPath": "@mui/material/styles",
    "name": "ThemeProvider",
    "syntax": "es6",
    "type": "module",
  },
  "Toasters": Object {
    "alias": "Toasters",
    "isTypeImport": false,
    "lib": "src/components/Toasters",
    "libFullPath": "src/components/Toasters",
    "name": "Toasters",
    "syntax": "es6",
    "type": "default",
  },
  "createTheme": Object {
    "alias": "createTheme",
    "isTypeImport": false,
    "lib": "@mui/material/styles",
    "libFullPath": "@mui/material/styles",
    "name": "createTheme",
    "syntax": "es6",
    "type": "module",
  },
  "getDefaultSessionId": Object {
    "alias": "getDefaultSessionId",
    "isTypeImport": false,
    "lib": "src/data/session",
    "libFullPath": "src/data/session",
    "name": "getDefaultSessionId",
    "syntax": "es6",
    "type": "module",
  },
  "setCurrentSessionId": Object {
    "alias": "setCurrentSessionId",
    "isTypeImport": false,
    "lib": "src/data/session",
    "libFullPath": "src/data/session",
    "name": "setCurrentSessionId",
    "syntax": "es6",
    "type": "module",
  },
  "useDarkModeSetting": Object {
    "alias": "useDarkModeSetting",
    "isTypeImport": false,
    "lib": "src/hooks",
    "libFullPath": "src/hooks",
    "name": "useDarkModeSetting",
    "syntax": "es6",
    "type": "module",
  },
  "useEffect": Object {
    "alias": "useEffect",
    "isTypeImport": false,
    "lib": "react",
    "libFullPath": "react",
    "name": "useEffect",
    "syntax": "es6",
    "type": "module",
  },
  "useGetCurrentSession": Object {
    "alias": "useGetCurrentSession",
    "isTypeImport": false,
    "lib": "src/hooks",
    "libFullPath": "src/hooks",
    "name": "useGetCurrentSession",
    "syntax": "es6",
    "type": "module",
  },
  "useGetSessions": Object {
    "alias": "useGetSessions",
    "isTypeImport": false,
    "lib": "src/hooks",
    "libFullPath": "src/hooks",
    "name": "useGetSessions",
    "syntax": "es6",
    "type": "module",
  },
  "useState": Object {
    "alias": "useState",
    "isTypeImport": false,
    "lib": "react",
    "libFullPath": "react",
    "name": "useState",
    "syntax": "es6",
    "type": "module",
  },
  "useUpsertSession": Object {
    "alias": "useUpsertSession",
    "isTypeImport": false,
    "lib": "src/hooks",
    "libFullPath": "src/hooks",
    "name": "useUpsertSession",
    "syntax": "es6",
    "type": "module",
  },
}
`;

exports[`coreUtils.parseEs6ImportLines importSample2 example with no transformation 2`] = `
Object {
  "@mui/material/Alert": Array [
    Object {
      "alias": "Alert",
      "isTypeImport": false,
      "lib": "@mui/material/Alert",
      "libFullPath": "@mui/material/Alert",
      "name": "Alert",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "@mui/material/Box": Array [
    Object {
      "alias": "Box",
      "isTypeImport": false,
      "lib": "@mui/material/Box",
      "libFullPath": "@mui/material/Box",
      "name": "Box",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "@mui/material/CircularProgress": Array [
    Object {
      "alias": "CircularProgress",
      "isTypeImport": false,
      "lib": "@mui/material/CircularProgress",
      "libFullPath": "@mui/material/CircularProgress",
      "name": "CircularProgress",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "@mui/material/styles": Array [
    Object {
      "alias": "createTheme",
      "isTypeImport": false,
      "lib": "@mui/material/styles",
      "libFullPath": "@mui/material/styles",
      "name": "createTheme",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "ThemeProvider",
      "isTypeImport": false,
      "lib": "@mui/material/styles",
      "libFullPath": "@mui/material/styles",
      "name": "ThemeProvider",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "react": Array [
    Object {
      "alias": "useEffect",
      "isTypeImport": false,
      "lib": "react",
      "libFullPath": "react",
      "name": "useEffect",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "useState",
      "isTypeImport": false,
      "lib": "react",
      "libFullPath": "react",
      "name": "useState",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "react-router-dom": Array [
    Object {
      "alias": "HashRouter",
      "isTypeImport": false,
      "lib": "react-router-dom",
      "libFullPath": "react-router-dom",
      "name": "HashRouter",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "Route",
      "isTypeImport": false,
      "lib": "react-router-dom",
      "libFullPath": "react-router-dom",
      "name": "Route",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "Routes",
      "isTypeImport": false,
      "lib": "react-router-dom",
      "libFullPath": "react-router-dom",
      "name": "Routes",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "src/components/ActionDialogs": Array [
    Object {
      "alias": "ActionDialogs",
      "isTypeImport": false,
      "lib": "src/components/ActionDialogs",
      "libFullPath": "src/components/ActionDialogs",
      "name": "ActionDialogs",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/components/AppHeader": Array [
    Object {
      "alias": "AppHeader",
      "isTypeImport": false,
      "lib": "src/components/AppHeader",
      "libFullPath": "src/components/AppHeader",
      "name": "AppHeader",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/components/ElectronEventListener": Array [
    Object {
      "alias": "ElectronEventListener",
      "isTypeImport": false,
      "lib": "src/components/ElectronEventListener",
      "libFullPath": "src/components/ElectronEventListener",
      "name": "ElectronEventListener",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/components/MissionControl": Array [
    Object {
      "alias": "MissionControl",
      "isTypeImport": false,
      "lib": "src/components/MissionControl",
      "libFullPath": "src/components/MissionControl",
      "name": "MissionControl",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/components/Toasters": Array [
    Object {
      "alias": "Toasters",
      "isTypeImport": false,
      "lib": "src/components/Toasters",
      "libFullPath": "src/components/Toasters",
      "name": "Toasters",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/data/session": Array [
    Object {
      "alias": "getDefaultSessionId",
      "isTypeImport": false,
      "lib": "src/data/session",
      "libFullPath": "src/data/session",
      "name": "getDefaultSessionId",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "setCurrentSessionId",
      "isTypeImport": false,
      "lib": "src/data/session",
      "libFullPath": "src/data/session",
      "name": "setCurrentSessionId",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "src/hooks": Array [
    Object {
      "alias": "useDarkModeSetting",
      "isTypeImport": false,
      "lib": "src/hooks",
      "libFullPath": "src/hooks",
      "name": "useDarkModeSetting",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "useGetCurrentSession",
      "isTypeImport": false,
      "lib": "src/hooks",
      "libFullPath": "src/hooks",
      "name": "useGetCurrentSession",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "useGetSessions",
      "isTypeImport": false,
      "lib": "src/hooks",
      "libFullPath": "src/hooks",
      "name": "useGetSessions",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "useUpsertSession",
      "isTypeImport": false,
      "lib": "src/hooks",
      "libFullPath": "src/hooks",
      "name": "useUpsertSession",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "src/views/EditConnectionPage": Array [
    Object {
      "alias": "EditConnectionPage",
      "isTypeImport": false,
      "lib": "src/views/EditConnectionPage",
      "libFullPath": "src/views/EditConnectionPage",
      "name": "EditConnectionPage",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/views/MainPage": Array [
    Object {
      "alias": "MainPage",
      "isTypeImport": false,
      "lib": "src/views/MainPage",
      "libFullPath": "src/views/MainPage",
      "name": "MainPage",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/views/NewConnectionPage": Array [
    Object {
      "alias": "NewConnectionPage",
      "isTypeImport": false,
      "lib": "src/views/NewConnectionPage",
      "libFullPath": "src/views/NewConnectionPage",
      "name": "NewConnectionPage",
      "syntax": "es6",
      "type": "default",
    },
  ],
}
`;

exports[`coreUtils.parseEs6ImportLines importSample2 example with no transformation 3`] = `
Set {
  "createTheme",
  "ThemeProvider",
  "Alert",
  "Box",
  "CircularProgress",
  "HashRouter",
  "Route",
  "Routes",
  "useEffect",
  "useState",
  "getDefaultSessionId",
  "setCurrentSessionId",
  "useDarkModeSetting",
  "useGetCurrentSession",
  "useGetSessions",
  "useUpsertSession",
  "ActionDialogs",
  "AppHeader",
  "EditConnectionPage",
  "ElectronEventListener",
  "MainPage",
  "MissionControl",
  "NewConnectionPage",
  "Toasters",
}
`;

exports[`coreUtils.parseEs6ImportLines importSample2 example with transform relative 1`] = `
Object {
  "ActionDialogs": Object {
    "alias": "ActionDialogs",
    "isTypeImport": false,
    "lib": "src/components/ActionDialogs",
    "libFullPath": "src/components/ActionDialogs",
    "name": "ActionDialogs",
    "syntax": "es6",
    "type": "default",
  },
  "Alert": Object {
    "alias": "Alert",
    "isTypeImport": false,
    "lib": "@mui/material/Alert",
    "libFullPath": "@mui/material/Alert",
    "name": "Alert",
    "syntax": "es6",
    "type": "default",
  },
  "AppHeader": Object {
    "alias": "AppHeader",
    "isTypeImport": false,
    "lib": "src/components/AppHeader",
    "libFullPath": "src/components/AppHeader",
    "name": "AppHeader",
    "syntax": "es6",
    "type": "default",
  },
  "Box": Object {
    "alias": "Box",
    "isTypeImport": false,
    "lib": "@mui/material/Box",
    "libFullPath": "@mui/material/Box",
    "name": "Box",
    "syntax": "es6",
    "type": "default",
  },
  "CircularProgress": Object {
    "alias": "CircularProgress",
    "isTypeImport": false,
    "lib": "@mui/material/CircularProgress",
    "libFullPath": "@mui/material/CircularProgress",
    "name": "CircularProgress",
    "syntax": "es6",
    "type": "default",
  },
  "EditConnectionPage": Object {
    "alias": "EditConnectionPage",
    "isTypeImport": false,
    "lib": "src/views/EditConnectionPage",
    "libFullPath": "src/views/EditConnectionPage",
    "name": "EditConnectionPage",
    "syntax": "es6",
    "type": "default",
  },
  "ElectronEventListener": Object {
    "alias": "ElectronEventListener",
    "isTypeImport": false,
    "lib": "src/components/ElectronEventListener",
    "libFullPath": "src/components/ElectronEventListener",
    "name": "ElectronEventListener",
    "syntax": "es6",
    "type": "default",
  },
  "HashRouter": Object {
    "alias": "HashRouter",
    "isTypeImport": false,
    "lib": "react-router-dom",
    "libFullPath": "react-router-dom",
    "name": "HashRouter",
    "syntax": "es6",
    "type": "module",
  },
  "MainPage": Object {
    "alias": "MainPage",
    "isTypeImport": false,
    "lib": "src/views/MainPage",
    "libFullPath": "src/views/MainPage",
    "name": "MainPage",
    "syntax": "es6",
    "type": "default",
  },
  "MissionControl": Object {
    "alias": "MissionControl",
    "isTypeImport": false,
    "lib": "src/components/MissionControl",
    "libFullPath": "src/components/MissionControl",
    "name": "MissionControl",
    "syntax": "es6",
    "type": "default",
  },
  "NewConnectionPage": Object {
    "alias": "NewConnectionPage",
    "isTypeImport": false,
    "lib": "src/views/NewConnectionPage",
    "libFullPath": "src/views/NewConnectionPage",
    "name": "NewConnectionPage",
    "syntax": "es6",
    "type": "default",
  },
  "Route": Object {
    "alias": "Route",
    "isTypeImport": false,
    "lib": "react-router-dom",
    "libFullPath": "react-router-dom",
    "name": "Route",
    "syntax": "es6",
    "type": "module",
  },
  "Routes": Object {
    "alias": "Routes",
    "isTypeImport": false,
    "lib": "react-router-dom",
    "libFullPath": "react-router-dom",
    "name": "Routes",
    "syntax": "es6",
    "type": "module",
  },
  "ThemeProvider": Object {
    "alias": "ThemeProvider",
    "isTypeImport": false,
    "lib": "@mui/material/styles",
    "libFullPath": "@mui/material/styles",
    "name": "ThemeProvider",
    "syntax": "es6",
    "type": "module",
  },
  "Toasters": Object {
    "alias": "Toasters",
    "isTypeImport": false,
    "lib": "src/components/Toasters",
    "libFullPath": "src/components/Toasters",
    "name": "Toasters",
    "syntax": "es6",
    "type": "default",
  },
  "createTheme": Object {
    "alias": "createTheme",
    "isTypeImport": false,
    "lib": "@mui/material/styles",
    "libFullPath": "@mui/material/styles",
    "name": "createTheme",
    "syntax": "es6",
    "type": "module",
  },
  "getDefaultSessionId": Object {
    "alias": "getDefaultSessionId",
    "isTypeImport": false,
    "lib": "src/data/session",
    "libFullPath": "src/data/session",
    "name": "getDefaultSessionId",
    "syntax": "es6",
    "type": "module",
  },
  "setCurrentSessionId": Object {
    "alias": "setCurrentSessionId",
    "isTypeImport": false,
    "lib": "src/data/session",
    "libFullPath": "src/data/session",
    "name": "setCurrentSessionId",
    "syntax": "es6",
    "type": "module",
  },
  "useDarkModeSetting": Object {
    "alias": "useDarkModeSetting",
    "isTypeImport": false,
    "lib": "src/hooks",
    "libFullPath": "src/hooks",
    "name": "useDarkModeSetting",
    "syntax": "es6",
    "type": "module",
  },
  "useEffect": Object {
    "alias": "useEffect",
    "isTypeImport": false,
    "lib": "react",
    "libFullPath": "react",
    "name": "useEffect",
    "syntax": "es6",
    "type": "module",
  },
  "useGetCurrentSession": Object {
    "alias": "useGetCurrentSession",
    "isTypeImport": false,
    "lib": "src/hooks",
    "libFullPath": "src/hooks",
    "name": "useGetCurrentSession",
    "syntax": "es6",
    "type": "module",
  },
  "useGetSessions": Object {
    "alias": "useGetSessions",
    "isTypeImport": false,
    "lib": "src/hooks",
    "libFullPath": "src/hooks",
    "name": "useGetSessions",
    "syntax": "es6",
    "type": "module",
  },
  "useState": Object {
    "alias": "useState",
    "isTypeImport": false,
    "lib": "react",
    "libFullPath": "react",
    "name": "useState",
    "syntax": "es6",
    "type": "module",
  },
  "useUpsertSession": Object {
    "alias": "useUpsertSession",
    "isTypeImport": false,
    "lib": "src/hooks",
    "libFullPath": "src/hooks",
    "name": "useUpsertSession",
    "syntax": "es6",
    "type": "module",
  },
}
`;

exports[`coreUtils.parseEs6ImportLines importSample2 example with transform relative 2`] = `
Object {
  "@mui/material/Alert": Array [
    Object {
      "alias": "Alert",
      "isTypeImport": false,
      "lib": "@mui/material/Alert",
      "libFullPath": "@mui/material/Alert",
      "name": "Alert",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "@mui/material/Box": Array [
    Object {
      "alias": "Box",
      "isTypeImport": false,
      "lib": "@mui/material/Box",
      "libFullPath": "@mui/material/Box",
      "name": "Box",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "@mui/material/CircularProgress": Array [
    Object {
      "alias": "CircularProgress",
      "isTypeImport": false,
      "lib": "@mui/material/CircularProgress",
      "libFullPath": "@mui/material/CircularProgress",
      "name": "CircularProgress",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "@mui/material/styles": Array [
    Object {
      "alias": "createTheme",
      "isTypeImport": false,
      "lib": "@mui/material/styles",
      "libFullPath": "@mui/material/styles",
      "name": "createTheme",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "ThemeProvider",
      "isTypeImport": false,
      "lib": "@mui/material/styles",
      "libFullPath": "@mui/material/styles",
      "name": "ThemeProvider",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "react": Array [
    Object {
      "alias": "useEffect",
      "isTypeImport": false,
      "lib": "react",
      "libFullPath": "react",
      "name": "useEffect",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "useState",
      "isTypeImport": false,
      "lib": "react",
      "libFullPath": "react",
      "name": "useState",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "react-router-dom": Array [
    Object {
      "alias": "HashRouter",
      "isTypeImport": false,
      "lib": "react-router-dom",
      "libFullPath": "react-router-dom",
      "name": "HashRouter",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "Route",
      "isTypeImport": false,
      "lib": "react-router-dom",
      "libFullPath": "react-router-dom",
      "name": "Route",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "Routes",
      "isTypeImport": false,
      "lib": "react-router-dom",
      "libFullPath": "react-router-dom",
      "name": "Routes",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "src/components/ActionDialogs": Array [
    Object {
      "alias": "ActionDialogs",
      "isTypeImport": false,
      "lib": "src/components/ActionDialogs",
      "libFullPath": "src/components/ActionDialogs",
      "name": "ActionDialogs",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/components/AppHeader": Array [
    Object {
      "alias": "AppHeader",
      "isTypeImport": false,
      "lib": "src/components/AppHeader",
      "libFullPath": "src/components/AppHeader",
      "name": "AppHeader",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/components/ElectronEventListener": Array [
    Object {
      "alias": "ElectronEventListener",
      "isTypeImport": false,
      "lib": "src/components/ElectronEventListener",
      "libFullPath": "src/components/ElectronEventListener",
      "name": "ElectronEventListener",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/components/MissionControl": Array [
    Object {
      "alias": "MissionControl",
      "isTypeImport": false,
      "lib": "src/components/MissionControl",
      "libFullPath": "src/components/MissionControl",
      "name": "MissionControl",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/components/Toasters": Array [
    Object {
      "alias": "Toasters",
      "isTypeImport": false,
      "lib": "src/components/Toasters",
      "libFullPath": "src/components/Toasters",
      "name": "Toasters",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/data/session": Array [
    Object {
      "alias": "getDefaultSessionId",
      "isTypeImport": false,
      "lib": "src/data/session",
      "libFullPath": "src/data/session",
      "name": "getDefaultSessionId",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "setCurrentSessionId",
      "isTypeImport": false,
      "lib": "src/data/session",
      "libFullPath": "src/data/session",
      "name": "setCurrentSessionId",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "src/hooks": Array [
    Object {
      "alias": "useDarkModeSetting",
      "isTypeImport": false,
      "lib": "src/hooks",
      "libFullPath": "src/hooks",
      "name": "useDarkModeSetting",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "useGetCurrentSession",
      "isTypeImport": false,
      "lib": "src/hooks",
      "libFullPath": "src/hooks",
      "name": "useGetCurrentSession",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "useGetSessions",
      "isTypeImport": false,
      "lib": "src/hooks",
      "libFullPath": "src/hooks",
      "name": "useGetSessions",
      "syntax": "es6",
      "type": "module",
    },
    Object {
      "alias": "useUpsertSession",
      "isTypeImport": false,
      "lib": "src/hooks",
      "libFullPath": "src/hooks",
      "name": "useUpsertSession",
      "syntax": "es6",
      "type": "module",
    },
  ],
  "src/views/EditConnectionPage": Array [
    Object {
      "alias": "EditConnectionPage",
      "isTypeImport": false,
      "lib": "src/views/EditConnectionPage",
      "libFullPath": "src/views/EditConnectionPage",
      "name": "EditConnectionPage",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/views/MainPage": Array [
    Object {
      "alias": "MainPage",
      "isTypeImport": false,
      "lib": "src/views/MainPage",
      "libFullPath": "src/views/MainPage",
      "name": "MainPage",
      "syntax": "es6",
      "type": "default",
    },
  ],
  "src/views/NewConnectionPage": Array [
    Object {
      "alias": "NewConnectionPage",
      "isTypeImport": false,
      "lib": "src/views/NewConnectionPage",
      "libFullPath": "src/views/NewConnectionPage",
      "name": "NewConnectionPage",
      "syntax": "es6",
      "type": "default",
    },
  ],
}
`;

exports[`coreUtils.parseEs6ImportLines importSample2 example with transform relative 3`] = `
Set {
  "createTheme",
  "ThemeProvider",
  "Alert",
  "Box",
  "CircularProgress",
  "HashRouter",
  "Route",
  "Routes",
  "useEffect",
  "useState",
  "getDefaultSessionId",
  "setCurrentSessionId",
  "useDarkModeSetting",
  "useGetCurrentSession",
  "useGetSessions",
  "useUpsertSession",
  "ActionDialogs",
  "AppHeader",
  "EditConnectionPage",
  "ElectronEventListener",
  "MainPage",
  "MissionControl",
  "NewConnectionPage",
  "Toasters",
}
`;
